# jaibber

./: .env.example  .gitignore  AGENT_SETUP.md  CLAUDE.md  FEATURES.md  README.md  TESTING.md  components.json  index.html  install-ubuntu.sh  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts  vite.config.web.ts
.github/workflows/: build.yml  publish-sdk.yml  release.yml
adapters/openclaw/: .env.example  .gitignore  README.md  adapter.ts  package-lock.json  package.json  tsconfig.json
adapters/openclaw-channel-jaibber/: README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
docs/: index.md
docs/.vitepress/: config.ts
docs/deployment/: systemd.md  vercel.md
docs/guide/: desktop-app.md  getting-started.md  headless-cli.md  multi-provider.md  organizations.md  sdk.md  webhooks.md
docs/reference/: api.md  message-format.md  sdk-api.md  task-system.md
public/: llms-full.txt  llms.txt  manifest.json  robots.txt  sitemap.xml
public/.well-known/: ai-plugin.json
sdk/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdk/src/: ably-manager.ts  agent.ts  cli.ts  client.ts  context.ts  index.ts  mentions.ts  templates.ts  types.ts
src/: App.css  App.tsx  WebRouter.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_providers.rs  claude_api.rs  error.rs  lib.rs  main.rs  openclaw.rs  state.rs
src-tauri/src/commands/: mod.rs  process_commands.rs  settings_commands.rs
src/components/: ErrorBoundary.tsx
(+99 files in other folders)
