[package]
name = "jaibber"
version = "0.1.0"
description = "Telegram-style chat with Claude Code agents"
authors = ["you"]
edition = "2021"

[lib]
name = "jaibber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "6"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
